set up jquery, minor changes to nav bar

--- a/nav-bar.html
+++ b/nav-bar.html
@@ -1,9 +1,15 @@
 <div id="nav_bar" class="row">
-      <div id="nav_bar_content" class="large-12 columns">
-          
-          <div class="nav_link"><a href="index.html">Overview</a></div>
-          <div class="nav_link"><a href="faq.html">FAQ</a></div>
-          <div class="nav_link"><a href="finances.html">Finances</a></div>
-          
+  <div id="nav_bar_content" class="large-12 columns">
+
+      <div class="nav_link_button">
+          <a class="nav_link" href="index.html">Overview</a>
       </div>
-    </div>
+      <div class="nav_link_button">
+          <a class="nav_link" href="faq.html">FAQ</a>
+      </div>
+      <div class="nav_link_button">
+          <a class="nav_link" href="finances.html">Finances</a>
+      </div>
+
+  </div>
+</div>
