--- a/finances.html
+++ b/finances.html
@@ -14,6 +14,7 @@
   </head>
   <body>
 
+      <!--navigation bar-->
     <span ng-nav-bar></span>
 
     <script src="js/vendor/jquery.js"></script>
