--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
       <!--AngularJS-->
       <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
       <script src="js/angular.js" type="text/javascript"></script>
+      
+      <!--jQuery-->
+      <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+      <script src="js/jquery.js" type="text/javascript"></script>
   </head>
   <body>
 
+      <!--navigation bar-->
     <span ng-nav-bar></span>
 
     <script src="js/vendor/jquery.js"></script>
