--- a/faq.html
+++ b/faq.html
@@ -18,15 +18,15 @@
     <span ng-nav-bar></span>
 
     <div class="row">
-      <div class="large-12-columns" id="header">
+      <div class="large-12-columns" id="header" style="display: block;">
+      <a href="index.html">
+      <img src ="" width="150"> </a>
+
 
 
       </div> <!-- header div -->
-      <div class="large-12-columns" id="about">
-        <h2> FREQUENTLY ASKED QUESTIONS </h2>
-        <div> 
+      <div class = "background-1"> <h1 id="FAQ-header"> FREQUENTLY ASKED QUESTIONS</h1>
               <p> Description and information here</p>
-        </div>
       </div>
       
    
