--- a/nav-bar.html
+++ b/nav-bar.html
@@ -1,15 +1,12 @@
+<div id="logo_top_container"><h1>logo here? lol</h1></div>
 <div id="nav_bar" class="row">
-  <div id="nav_bar_content" class="large-12 columns">
-
-      <div class="nav_link_button">
+    <div class="nav_link_button small-6 medium-2 large-1">
           <a class="nav_link" href="index.html">Overview</a>
       </div>
-      <div class="nav_link_button">
+      <div class="nav_link_button small-6 medium-2 large-1">
           <a class="nav_link" href="faq.html">FAQ</a>
       </div>
-      <div class="nav_link_button">
+      <div class="nav_link_button small-6 medium-2 large-1">
           <a class="nav_link" href="finances.html">Finances</a>
       </div>
-
-  </div>
 </div>
