--- a/finances.html
+++ b/finances.html
@@ -11,6 +11,10 @@
       <!--AngularJS-->
       <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
       <script src="js/angular.js" type="text/javascript"></script>
+      
+      <!--jQuery-->
+      <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+      <script src="js/jquery.js" type="text/javascript"></script>
   </head>
   <body>
 
