--- a/nav-bar.html
+++ b/nav-bar.html
@@ -1,5 +1,5 @@
 <div id="logo_top_container"><h1>logo here? lol</h1></div>
-<div id="nav_bar" class="row">
+<div id="nav_bar">
     <div class="nav_link_button small-6 medium-2 large-1">
         <a class="nav_link" href="index.html">Overview</a>
     </div>
