--- a/index.html
+++ b/index.html
@@ -26,18 +26,15 @@
 
       </div> <!-- header div -->
       <div class="large-12-columns" id="about">
-        <h2> About the fee page </h2>
+        <h2 class="homepage-title"> Title1 here </h2>
         <div> 
-              <p> Some details about the fee page</p>
-              <h3> Header3 </h3>
-              <ul>
-                <li> list of objectives, item 1 </li>
-                <li> item 2 </li>
-                <li> item 3</li>
-              </ul>
+              <p class="homepage-text"> The homepage text</p>
         </div>
         <a class = "button"> Possible link to something else, once we decide what </a>
       </div>   <!-- about div -->
+      <div class="videos-and-graphics">
+      <iframe src="https://www.youtube.com/embed/5xNfxwpiXvQ?autoplay=1"></iframe>
+      </div>
       <div class="large-12-columns" id="next set of info">
       <h2> Same as about the fee page </h2>
       </div>
