--- a/nav-bar.html
+++ b/nav-bar.html
@@ -1,5 +1,6 @@
 <div id="logo_top_container"><h1>logo here? lol</h1></div>
-<div id="nav_bar">
+<!--
+<nav id="nav_bar" class="top-bar sticky">
     <div class="nav_link_button small-6 medium-2 large-1">
         <a class="nav_link" href="index.html">Overview</a>
     </div>
@@ -9,4 +10,19 @@
     <div class="nav_link_button small-6 medium-2 large-1">
         <a class="nav_link" href="finances.html">Finances</a>
     </div>
+</nav>
+-->
+
+<div class="sticky">
+  <nav id="nav_bar" class="top-bar" data-topbar>
+    <div class="nav_link_button small-4 medium-2 large-1">
+        <a class="nav_link" href="index.html">Overview</a>
+    </div>
+    <div class="nav_link_button small-4 medium-2 large-1">
+        <a class="nav_link" href="faq.html">FAQ</a>
+    </div>
+    <div class="nav_link_button small-4 medium-2 large-1">
+        <a class="nav_link" href="finances.html">Finances</a>
+    </div>
+  </nav>
 </div>
