--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
       </div> <!-- header div -->
       <div class="large-12-columns" id="about">
         <h2 class="homepage-title"> Title1 here </h2>
+        <div class="subheader"> <i> Gotham medium text here </i></div>
         <div> 
               <p class="homepage-text"> The homepage text</p>
         </div>
         <a class = "button"> Possible link to something else, once we decide what </a>
       </div>   <!-- about div -->
       <div class="videos-and-graphics">
-      <iframe src="https://www.youtube.com/embed/5xNfxwpiXvQ?autoplay=1"></iframe>
+      <iframe src="https://www.youtube.com/embed/5xNfxwpiXvQ?autoplay=0"></iframe>
       </div>
       <div class="large-12-columns" id="next set of info">
       <h2> Same as about the fee page </h2>
