--- a/nav-bar.html
+++ b/nav-bar.html
@@ -1,28 +1,18 @@
 <div id="logo_top_container"><h1>logo here? lol</h1></div>
-<!--
-<nav id="nav_bar" class="top-bar sticky">
-    <div class="nav_link_button small-6 medium-2 large-1">
-        <a class="nav_link" href="index.html">Overview</a>
+<nav id="nav_bar">
+    <div class="nav_link_button small-2 medium-2 large-1">
+        <a class="nav_link" href="index.html">About</a>
     </div>
-    <div class="nav_link_button small-6 medium-2 large-1">
-        <a class="nav_link" href="faq.html">FAQ</a>
+    <div class="nav_link_button small-2 medium-2 large-1">
+        <a class="nav_link" href="index.html">FAQ</a>
     </div>
-    <div class="nav_link_button small-6 medium-2 large-1">
-        <a class="nav_link" href="finances.html">Finances</a>
+    <div class="nav_link_button small-2 medium-2 large-1">
+        <a class="nav_link" href="index.html">Finances</a>
+    </div>
+    <div class="nav_link_button small-2 medium-2 large-1">
+        <a class="nav_link" href="faq.html">Contact</a>
+    </div>
+    <div class="nav_link_button small-2 medium-2 large-1">
+        <a class="nav_link" href="finances.html">Vote</a>
     </div>
 </nav>
--->
-
-<div class="sticky">
-  <nav id="nav_bar" class="top-bar" data-topbar>
-    <div class="nav_link_button small-4 medium-2 large-1">
-        <a class="nav_link" href="index.html">Overview</a>
-    </div>
-    <div class="nav_link_button small-4 medium-2 large-1">
-        <a class="nav_link" href="faq.html">FAQ</a>
-    </div>
-    <div class="nav_link_button small-4 medium-2 large-1">
-        <a class="nav_link" href="finances.html">Finances</a>
-    </div>
-  </nav>
-</div>
