--- a/nav-bar.html
+++ b/nav-bar.html
@@ -1,3 +1,4 @@
+
 <div id="logo_top_container"><h1>logo here? lol</h1></div>
 <!--
 <nav id="nav_bar" class="top-bar sticky">
@@ -20,6 +21,9 @@
     </div>
     <div class="nav_link_button small-4 medium-2 large-1">
         <a class="nav_link" href="faq.html">FAQ</a>
+    </div>
+    <div class="nav_link_button small-4 medium-2 large-1">
+        <a class="nav_link" href="faq.html">About</a>
     </div>
     <div class="nav_link_button small-4 medium-2 large-1">
         <a class="nav_link" href="finances.html">Finances</a>
