accidentally messed up the links before haha

--- a/nav-bar.html
+++ b/nav-bar.html
@@ -4,15 +4,15 @@
         <a class="nav_link" href="index.html">About</a>
     </div>
     <div class="nav_link_button small-2 medium-2 large-1">
-        <a class="nav_link" href="index.html">FAQ</a>
+        <a class="nav_link" href="faq.html">FAQ</a>
     </div>
     <div class="nav_link_button small-2 medium-2 large-1">
-        <a class="nav_link" href="index.html">Finances</a>
+        <a class="nav_link" href="finances.html">Finances</a>
     </div>
     <div class="nav_link_button small-2 medium-2 large-1">
-        <a class="nav_link" href="faq.html">Contact</a>
+        <a class="nav_link" href="contact.html">Contact</a>
     </div>
     <div class="nav_link_button small-2 medium-2 large-1">
-        <a class="nav_link" href="finances.html">Vote</a>
+        <a class="nav_link" href="vote.html">Vote</a>
     </div>
 </nav>
