fixed more scrolling bugs

--- a/faq.html
+++ b/faq.html
@@ -21,6 +21,7 @@
       <!--navigation bar-->
     <span ng-nav-bar></span>
 
+      <div id="main_content"></div>
     <div class="row">
       <div class="large-12-columns" id="header" style="display: block;">
       <a href="index.html">
