--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
     <!--navigation bar-->
     <span ng-nav-bar></span>
 
+      <div id="main_content"></div>
     <div class="row">
       <div class="medium-8 medium-centered columns">
 
