content for FAQ page

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
           <label>Message</label>
           <textarea name="message" placeholder="Enter your message here" required=""></textarea>
           
-          <input type="submit" class="nice blue radius button" value="Send Message">
+          <input type="submit" class="button" value="Send Message">
         </form>
 
       </div>
