--- a/nav-bar.html
+++ b/nav-bar.html
@@ -2,7 +2,7 @@
 <div class="nav-section">
 <nav id="nav_bar">
    <div class="nav_link_button small-2 medium-2 large-1">
-       <a class="nav_link" href="index.html">About</a>
+       <a class="nav_link" href="about.html">About</a>
    </div>
    <div class="nav_link_button small-2 medium-2 large-1">
        <a class="nav_link" href="faq.html">FAQ</a>
