more nav bar stufff

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <!--navigation bar-->
       <span ng-nav-bar></span>
 
-    <div id="main_content" class="row">
+      <div id="main_content"></div>
+    <div class="row">
       <div class="large-12-columns" id="header">
 
       </div> <!-- header div -->
