--- a/nav-bar.html
+++ b/nav-bar.html
@@ -2,19 +2,19 @@
 <div class="nav-section">
 <nav id="nav_bar">
     <ul id="nav_bar_list">
-        <li class="nav_link_button small-2 medium-2 large-1">
-            <a class="nav_link" href="index.html">About</a>
+        <li class="nav_link_button small-1 medium-2 large-1">
+            <a class="nav_link" href="about.html">About</a>
         </li>
-        <li class="nav_link_button small-2 medium-2 large-1">
+        <li class="nav_link_button small-1 medium-2 large-1">
             <a class="nav_link" href="faq.html">FAQ</a>
         </li>
-        <li class="nav_link_button small-2 medium-2 large-1">
+        <li class="nav_link_button small-1 medium-2 large-1">
             <a class="nav_link" href="finances.html">Finances</a>
         </li>
-        <li class="nav_link_button small-2 medium-2 large-1">
+        <li class="nav_link_button small-1 medium-2 large-1">
             <a class="nav_link" href="contact.html">Contact</a>
         </li>
-        <li class="nav_link_button small-2 medium-2 large-1">
+        <li class="nav_link_button small-1 medium-2 large-1">
             <a class="nav_link" href="vote.html">Vote</a>
         </li>
     </ul>
