--- a/nav-bar.html
+++ b/nav-bar.html
@@ -3,6 +3,9 @@
 <nav id="nav_bar">
     <ul id="nav_bar_list">
         <li class="nav_link_button small-1 medium-2 large-1">
+            <a class="nav_link" href="index.html">Home</a>
+        </li>
+        <li class="nav_link_button small-1 medium-2 large-1">
             <a class="nav_link" href="about.html">About</a>
         </li>
         <li class="nav_link_button small-1 medium-2 large-1">
@@ -22,7 +25,10 @@
 <nav id="nav_bar_small">
     <ul id="nav_bar_small_list">
             <li class="nav_link_button_small">
-                <a class="nav_link" href="index.html">About</a>
+                <a class="nav_link" href="index.html">Home</a>
+            </li>
+            <li class="nav_link_button_small">
+                <a class="nav_link" href="about.html">About</a>
             </li>
             <li class="nav_link_button_small">
                 <a class="nav_link" href="faq.html">FAQ</a>
