--- a/vote.html
+++ b/vote.html
@@ -24,7 +24,7 @@
     <div class="row">
       <div class="medium-8 medium-centered columns">
 
-        <h1>Vote now!</h1>
+        <h1 class="colorA">Vote now!</h1>
         <p>
         Thank you for supporting the future of the Daily Bruin and Bruinwalk.com.
         </p>
@@ -35,7 +35,7 @@
         Voting opens at 10 a.m. on Monday, May 2 and closes at 3 p.m. on Friday, May 6.
         </p>
 
-        TODO: [[“vote here” button - links to MyUCLA]]
+        <a class="button">Vote here</a>
 
       </div>
     </div>
