--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <div class="row">
       <div class="medium-8 medium-centered columns">
 
-        <h1>Contact</h1>
+        <h1 class="colorA">Contact</h1>
         <p>
         Thanks for your interest in the Daily Bruin and Bruinwalk.com referendum! You can get in touch with us by emailing <a href="mailto:campaign@dailybruin.com">campaign@dailybruin.com</a>. We’ll respond within 12 hours!
         </p>
