--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
           <p>The Daily Bruin and Bruinwalk.com Referendum calls for a $3 student fee increase to keep UCLA's <b>daily student newspaper</b> and <b>student-run professor review site</b> alive for years to come. For decades, we've relied on selling printed ads in the Daily Bruin as our main source of income. But now – as readers increasingly use our services online, and print advertising can't support us anymore – <b>the Daily Bruin and Bruinwalk need your vote</b> to let us continue serving the campus.</p>
 
-          <a class="button" href="vote.html">Vote now</a>
+          <a class="button" href="http://my.ucla.edu">Log In to MyUCLA and click "Elections" to vote</a>
 
         </div>
 
