--- a/finances.html
+++ b/finances.html
@@ -16,12 +16,11 @@
       <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
       <script src="js/jquery.js" type="text/javascript"></script>
   </head>
-  <body>
+  <body class="ng-cloak">
 
     <!--navigation bar-->
     <span ng-nav-bar></span>
 
-      <div id="main_content"></div>
     <div class="row">
       <div class="medium-8 medium-centered columns">
 
