--- a/nav-bar.html
+++ b/nav-bar.html
@@ -43,5 +43,5 @@
                 <a class="nav_link" href="vote.html">Vote</a>
             </li>
     </ul>
-
 </nav>
+<div id="main_content" class="row"></div>
