--- a/vote.html
+++ b/vote.html
@@ -16,7 +16,7 @@
       <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
       <script src="js/jquery.js" type="text/javascript"></script>
   </head>
-  <body>
+  <body class="ng-cloak">
 
     <!--navigation bar-->
     <span ng-nav-bar></span>
