fixed some stuff

--- a/about.html
+++ b/about.html
@@ -21,7 +21,8 @@
     <!--navigation bar-->
     <span ng-nav-bar></span>
 
-    <div class="row">
+      <div id="main_content" class="row"></div>
+      <div class="row">
       <div class="medium-8 columns">
 
         <h1 class="colorA">About Bruinwalk.com</h2>
