--- a/faq.html
+++ b/faq.html
@@ -21,6 +21,7 @@
       <!--navigation bar-->
     <span ng-nav-bar></span>
 
+      <div id="main_content" class="row"></div>
     <div class="row">
       <div class="medium-8 columns">
 
