--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!--navigation bar-->
     <span ng-nav-bar></span>
 
+      <div id="main_content" class="row"></div>
       <div class="medium-8 medium-centered columns">
 
         <div class="about">
