--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,7 @@
       <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
       <script src="js/jquery.js" type="text/javascript"></script>
   </head>
-  <body class="ng-cloak">
+  <body ng-controller="myController" class="ng-cloak">
 
       <!--navigation bar-->
     <span ng-nav-bar></span>
