change financial info to list

--- a/finances.html
+++ b/finances.html
@@ -34,7 +34,7 @@
         Feel free to email us at <a href="mailto:campaign@dailybruin.com">campaign@dailybruin.com</a> if you have any questions about our financial statements or about the referendum. We will return your email within 12 hours.
         </p>
 
-        <iframe src="https://drive.google.com/embeddedfolderview?id=0B9y1-prT44zARlgxcGNpSGg2Z0U#grid" width="100%" height="450" frameborder="0"></iframe>
+        <iframe src="https://drive.google.com/embeddedfolderview?id=0B9y1-prT44zARlgxcGNpSGg2Z0U#list" width="100%" height="450" frameborder="0"></iframe>
 
       </div>
     </div>
