add small shadow below nav

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html ng-app="myApp" class="no-js" lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
-  
+
   <body ng-controller="myController" class="ng-cloak">
 
     <!--navigation bar-->
