started implementing forms

--- a/vote.html
+++ b/vote.html
@@ -31,6 +31,16 @@
 
         <a class="button">Vote here</a>
 
+       <form action="contact.php" method="post">
+<p><b>Your Name:</b> <input type="text" name="yourname" /><br />
+<b>E-mail:</b> <input type="text" name="email" /><br />
+<p><b>Your comments:</b><br />
+<textarea name="comments" rows="10" cols="40"></textarea></p>
+<p><input type="submit" value="Send it!"></p>
+<p> </p>
+</form>
+
+
       </div>
     </div>
   
