some of the finished graphics

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
       </div>
 
     </div>
+
+
+    <div class="medium-6 medium-centered columns">
+      <img src="http://dailybruin.com/images/2016/04/fee.top5_.edit2_.png">
+    </div>
     
     
 
