--- a/vote.html
+++ b/vote.html
@@ -31,6 +31,8 @@
 
         <a class="button">Vote here</a>
 
+        <img src="http://dailybruin.com/images/2016/04/fee.votingprocedure.edit1_.png">
+
        <form action="contact.php" method="post">
 <p><b>Your Name:</b> <input type="text" name="yourname" /><br />
 <b>E-mail:</b> <input type="text" name="email" /><br />
