--- a/finances.html
+++ b/finances.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
 
-  <body ng-controller="myController" class="ng-cloak">
+  <body ng-controller="myController" ng-cloak>
 
     <!--navigation bar-->
     <span ng-nav-bar></span>
