--- a/nav-bar.html
+++ b/nav-bar.html
@@ -1,4 +1,9 @@
-<div id="logo_top_container"><h2>logo here? lol</h2> <a href="index.html"></a></div>
+<div id="logo_top_container">
+    <a href="index.html">
+        <img src="Long-logo.svg">
+    </a>
+</div>
+
 <div class="nav-section">
 <nav id="nav_bar">
     <ul id="nav_bar_list">
