faq capitalize daily bruin

--- a/faq.html
+++ b/faq.html
@@ -81,7 +81,7 @@
     <div class="row">
       <div class="medium-8 columns">
 
-        <h1 class="colorB">Why do you still print the daily bruin?</h1>
+        <h1 class="colorB">Why do you still print the Daily Bruin?</h1>
 
         <p>While revenues from ads in the printed Daily Bruin have been dropping for years, they still supply the highest portion of Student Media&rsquo;s income; as of 2015, printing and distribution costs as well as the other Daily Bruin controllable expenses are fully paid for by income from print advertising. Additionally, if the Daily Bruin were not to be printed, we may have to forfeit the Daily Bruin kiosks around campus, which would slash another $200,000 per year from Student Media&rsquo;s budget from kiosk advertising sales. We hope to keep bringing in sales dollars from the printed Daily Bruin and our campus kiosks, preventing us from asking the student body for additional fees.</p>
         
