--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       <div class="about">
 
         <span class="homepage-title">
-          The Daily Bruin and Bruinwalk.com are asking for your help.
+          For 97 years, we've told UCLA's story. Now, we need your help.
         </span>
 
-        <p>The Daily Bruin and Bruinwalk.com Referendum calls for a $3 student fee increase to keep UCLA's <b>daily student newspaper</b> and <b>student-run professor review site</b> alive for years to come. For decades, we've relied on selling printed ads in the Daily Bruin as our main source of income. But now – as readers increasingly use our services online, and print advertising can't support us anymore – <b>the Daily Bruin and Bruinwalk.com need your vote</b> to let us continue serving the campus.</p>
+        <p>The Daily Bruin and Bruinwalk.com Referendum calls for a $3 student fee increase to keep UCLA's <b>student-run professor review site</b> and <b>daily student newspaper</b> alive for years to come. For decades, the Daily Bruin and its sister publications have relied on selling printed newspaper ads as our main source of income. But now – as readers increasingly use our services online, and print advertising can't support us anymore – <b>UCLA's student-run media need your vote</b> to let us continue serving the campus.</p>
 
         <a class="button" href="http://my.ucla.edu">Log In to MyUCLA and click "Elections" to vote</a>
 
