--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p>The Daily Bruin and Bruinwalk.com Referendum calls for a $3 student fee increase to keep UCLA's <b>student-run professor review site</b> and <b>daily student newspaper</b> alive for years to come. For decades, the Daily Bruin and its sister publications have relied on selling printed newspaper ads as our main source of income. But now – as readers increasingly use our services online, and print advertising can't support us anymore – <b>UCLA's student-run media need your vote</b> to let us continue serving the campus.</p>
 
 
-        <a class="button" href="http://my.ucla.edu">Log In to MyUCLA and click "Elections" to vote</a>
+        <a class="button" href="vote.html">Remind me when voting opens</a>
 
          <br><br>
 
