--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     </div>
 
 
-    <div class="medium-6 medium-centered columns">
+ <!--    <div class="medium-6 medium-centered columns">
       <img src="http://dailybruin.com/images/2016/04/fee.top5_.edit2_.png">
     </div>
-    
+     -->
     
 
     <script src="js/vendor/jquery.js"></script>
