--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,7 @@
 
       <div id="main_content" class="row"></div>
     <div class="row">
-      <div class="medium-8 columns">
+      <div class="medium-8 medium-centered columns">
 
         <h1 class="colorA">What is the Daily Bruin &amp; Bruinwalk.com Referendum?</h1>
 
@@ -26,7 +26,7 @@
     </div>
 
     <div class="row">
-      <div class="medium-8 medium-push-4 columns">
+      <div class="medium-8 medium-centered columns">
 
         <h1 class="colorB">Why is this important?</h1>
 
@@ -36,7 +36,7 @@
     </div>
 
     <div class="row">
-      <div class="medium-8 columns">
+      <div class="medium-8 medium-centered  columns">
 
         <h1 class="colorC">What would the referendum support?</h1>
 
@@ -46,7 +46,7 @@
     </div>
 
     <div class="row">
-      <div class="medium-8 medium-push-4 columns">
+      <div class="medium-8 medium-centered columns">
 
         <h1 class="colorA">Why ask for a referendum instead of cutting costs?</h1>
 
@@ -79,7 +79,7 @@
     </div>
 
     <div class="row">
-      <div class="medium-8 columns">
+      <div class="medium-8 medium-centered columns">
 
         <h1 class="colorB">Why do you still print the Daily Bruin?</h1>
 
@@ -89,7 +89,7 @@
     </div>
 
     <div class="row">
-      <div class="medium-8 medium-push-4 columns">
+      <div class="medium-8 medium-centered columns">
 
         <h1 class="colorC">What happens if the referendum does not pass?</h1>
 
@@ -99,7 +99,7 @@
     </div>
 
     <div class="row">
-      <div class="medium-8 columns">
+      <div class="medium-8 medium-centered columns">
 
         <h1 class="colorA">How are the Daily Bruin and Bruinwalk.com funded currently?</h1>
 
@@ -113,7 +113,7 @@
     </div>
 
     <div class="row">
-      <div class="medium-8 medium-push-4 columns">
+      <div class="medium-8 medium-centered columns">
 
         <h1 class="colorB">Are other campuses facing the same problem?</h1>
 
@@ -123,7 +123,7 @@
     </div>
 
     <div class="row">
-      <div class="medium-8 columns">
+      <div class="medium-8 medium-centered columns">
 
         <h1 class="colorC">How do I vote?</h1>
 
@@ -133,7 +133,7 @@
     </div>
 
     <div class="row">
-      <div class="medium-8 medium-push-4 columns">
+      <div class="medium-8 medium-centered columns">
 
         <h1 class="colorA">More questions?</h1>
 
