change vote title, remove button for now

--- a/vote.html
+++ b/vote.html
@@ -18,7 +18,7 @@
     <div class="row">
       <div class="medium-8 medium-centered columns">
 
-        <h1 class="colorA">Vote now!</h1>
+        <h1 class="colorA">Vote yes!</h1>
         <p>
         Thank you for supporting the future of the Daily Bruin and Bruinwalk.com.
         </p>
@@ -29,7 +29,7 @@
         Voting opens at 10 a.m. on Monday, May 2 and closes at 3 p.m. on Friday, May 6.
         </p>
 
-        <a class="button">Vote here</a>
+       <!--  <a class="button">Vote here</a> -->
 
         <img src="http://dailybruin.com/images/2016/04/fee.votingprocedure.edit1_.png">
 
