--- a/contact.html
+++ b/contact.html
@@ -23,14 +23,7 @@
         Thanks for your interest in the Daily Bruin and Bruinwalk.com referendum! You can get in touch with us by emailing <a href="mailto:campaign@dailybruin.com">campaign@dailybruin.com</a>. We’ll respond within 12 hours!
         </p>
 
-        <form action="contact.php" method="post">
-<p><b>Your Name:</b> <input type="text" name="yourname" /><br />
-<b>E-mail:</b> <input type="text" name="email" /><br />
-<p><b>Your comments:</b><br />
-<textarea name="comments" rows="10" cols="40"></textarea></p>
-<p><input type="submit" value="Send it!"></p>
-<p> </p>
-</form>
+       <iframe src="https://docs.google.com/forms/d/1SRHFtu2SQCztUG2FBSAwWYVvdVohQ9OCvDOOIWwbVLs/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
         <!--
         <form name="contact_form" action="contact-form-handler.php" action="post">
