--- a/vote.html
+++ b/vote.html
@@ -33,14 +33,7 @@
 
         <img src="http://dailybruin.com/images/2016/04/fee.votingprocedure.edit1_.png">
 
-       <form action="contact.php" method="post">
-<p><b>Your Name:</b> <input type="text" name="yourname" /><br />
-<b>E-mail:</b> <input type="text" name="email" /><br />
-<p><b>Your comments:</b><br />
-<textarea name="comments" rows="10" cols="40"></textarea></p>
-<p><input type="submit" value="Send it!"></p>
-<p> </p>
-</form>
+       <iframe src="https://docs.google.com/forms/d/12QWcNsNc520yeB43FdeaYYTSVcFXpTFs-uD4RH1dp3w/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
 
       </div>
