--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Daily Bruin and Bruinwalk.com Referendum</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
+    <meta property="og:image" content="ReferendumLogo.png" />
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
