--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,10 @@
 
         <h1 class="colorA">Contact</h1>
         <p>
-        Thanks for your interest in the Daily Bruin and Bruinwalk.com referendum! You can get in touch with us by emailing <a href="mailto:campaign@dailybruin.com">campaign@dailybruin.com</a>. We’ll respond within 12 hours!
+        Thanks for your interest in the Daily Bruin and Bruinwalk.com referendum! You can get in touch with us by using the form below or by emailing <a href="mailto:campaign@dailybruin.com">campaign@dailybruin.com</a>. We’ll respond within 12 hours!
         </p>
 
-       <iframe src="https://docs.google.com/forms/d/1SRHFtu2SQCztUG2FBSAwWYVvdVohQ9OCvDOOIWwbVLs/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+       <iframe src="https://docs.google.com/forms/d/1SRHFtu2SQCztUG2FBSAwWYVvdVohQ9OCvDOOIWwbVLs/viewform?embedded=true" width="760" height="750" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
         <!--
         <form name="contact_form" action="contact-form-handler.php" action="post">
