--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <meta property="og:image" content="ReferendumLogo.png" />
+    <meta property="og:description" content="For 97 years, we've told UCLA's story. Now, we need your help." />
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -38,7 +39,7 @@
         <p>The Daily Bruin and Bruinwalk.com Referendum calls for a $3 student fee increase to keep UCLA's <b>student-run professor review site</b> and <b>daily student newspaper</b> alive for years to come. For decades, the Daily Bruin and its sister publications have relied on selling printed newspaper ads as our main source of income. But now – as readers increasingly use our services online, and print advertising can't support us anymore – <b>UCLA's student-run media need your vote</b> to let us continue serving the campus.</p>
 
 
-        <a class="button" href="vote.html">Send me a reminder when voting begins!</a>
+        <a class="button" style="margin-right:1em;" href="about.html">Read more about the referendum</a><a class="button" href="vote.html">Remind me when voting begins!</a>
 
          <br><br>
 
