--- a/vote.html
+++ b/vote.html
@@ -7,6 +7,8 @@
     <title>Vote | Daily Bruin & Bruinwalk Referendum</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
+    <meta property="og:image" content="http://dailybruin.com/images/2016/04/ReferendumLogo.png" />
+    <meta property="og:description" content="For 97 years, we've told UCLA's story. Now, we need your help." />
   </head>
   
   <body ng-controller="myController" ng-cloak>
