link favicon.ico

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Daily Bruin and Bruinwalk.com Referendum</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <meta property="og:image" content="http://dailybruin.com/images/2016/04/ReferendumLogo1.png" />
     <meta property="og:description" content="For 97 years, we've told UCLA's story. Now, we need your help." />
     <script>
