--- a/faq.html
+++ b/faq.html
@@ -145,6 +145,14 @@
       </div>
     </div>
 
+    <footer>
+      <div class="row">
+        <div class="medium-6 medium-centered columns">
+          PRINTING OUT AND DISTRIBUTING THIS MATERIAL IS STRICTLY PROHIBITED. ALL CAMPAIGN LEAFLETS MUST BE STAMPED AT THE E-BOARD OFFICE, 519 KERCKHOFF. FAILURE TO COMPLY WITH THIS GUIDELINE WILL CONSTITUTE A VIOLATION OF THE ELECTION CODE.
+        </div>
+      </div>
+    </footer>
+
     <script src="js/vendor/jquery.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="js/vendor/what-input.js"></script>
