--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,15 @@
 
       </div>
     </div>
+
+
+    <footer>
+      <div class="row">
+        <div class="medium-6 medium-centered columns">
+          PRINTING OUT AND DISTRIBUTING THIS MATERIAL IS STRICTLY PROHIBITED. ALL CAMPAIGN LEAFLETS MUST BE STAMPED AT THE E-BOARD OFFICE, 519 KERCKHOFF. FAILURE TO COMPLY WITH THIS GUIDELINE WILL CONSTITUTE A VIOLATION OF THE ELECTION CODE.
+        </div>
+      </div>
+    </footer>
   
 
 
