--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
     </div>
 
 
+    <footer>
+      <div class="row">
+        <div class="medium-6 medium-centered columns">
+          PRINTING OUT AND DISTRIBUTING THIS MATERIAL IS STRICTLY PROHIBITED. ALL CAMPAIGN LEAFLETS MUST BE STAMPED AT THE E-BOARD OFFICE, 519 KERCKHOFF. FAILURE TO COMPLY WITH THIS GUIDELINE WILL CONSTITUTE A VIOLATION OF THE ELECTION CODE.
+        </div>
+      </div>
+    </footer>
+
+
  <!--    <div class="medium-6 medium-centered columns">
       <img src="http://dailybruin.com/images/2016/04/fee.top5_.edit2_.png">
     </div>
