added a link for vote in the 2nd last question

--- a/faq.html
+++ b/faq.html
@@ -130,7 +130,7 @@
 
         <h1 class="colorC">How do I vote?</h1>
 
-        <p>Students can vote for the Daily Bruin and Bruinwalk.com referendum throughout Week 6 on <a href="http://my.ucla.edu">MyUCLA</a>! Voting opens at 10 a.m. on Monday, May 2 and closes at 3 p.m. on Friday, May 6.</p>
+        <p>Students can <a href="/vote.html"> vote </a> for the Daily Bruin and Bruinwalk.com referendum throughout Week 6 on <a href="http://my.ucla.edu">MyUCLA</a>! Voting opens at 10 a.m. on Monday, May 2 and closes at 3 p.m. on Friday, May 6.</p>
         
       </div>
     </div>
