--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           For 97 years, we've told UCLA's story.<br> Now, we need your help.
         </span>
 
-        <p>The Daily Bruin and Bruinwalk.com Referendum calls for a $3 student fee increase to keep UCLA's <b>student-run professor review site</b> and <b>daily student newspaper</b> alive for years to come. For decades, the Daily Bruin and its sister publications have relied on selling printed newspaper ads as our main source of income. But now – as readers increasingly use our services online, and print advertising can't support us anymore – <b>UCLA's student-run media need your vote</b> to let us continue serving the campus.</p>
+        <p>The Daily Bruin and Bruinwalk.com Referendum calls for a $3 student fee increase to keep UCLA's <b>student-run professor review site</b> and <b>daily student newspaper</b> alive for years to come. For decades, the Daily Bruin and its sister publications have relied on selling printed newspaper ads as our main source of income. But now – as readers increasingly use our services online, and print advertising can't support us anymore – <b>UCLA's student-run media needs your vote</b> to let us continue serving the campus.</p>
 
 
         <a class="button" style="margin:1em 1em 0.5em 1em;" href="about.html">Read more about the referendum</a>
