added title for finance reports

--- a/finances.html
+++ b/finances.html
@@ -31,6 +31,9 @@
         </p>
 
         <img src="http://dailybruin.com/images/2016/04/fee.finance.png" />
+        <b>Annual Finance Reports</b>
+
+
 
         <iframe src="https://drive.google.com/embeddedfolderview?id=0B9y1-prT44zARlgxcGNpSGg2Z0U#list" width="100%" height="450" frameborder="0"></iframe>
 
