updated text content

--- a/finances.html
+++ b/finances.html
@@ -23,7 +23,7 @@
 
         <h1 class="colorA">Finances</h1>
         <p>
-        Below are the annual financial reports for UCLA Student Media, the publisher of the Daily Bruin and Bruinwalk.com, from 1990 to 2003, as well as Student Media's audited financial statements each month since 2003. These 26 years of reports detail our commitments to transparency, aggressive cost controls and student-centered programs.
+        Below are the audited annual financial reports for UCLA Student Media, the publisher of the Daily Bruin and Bruinwalk.com, from 1990 to 2002, as well as Student Media's monthly financial statements since 2003. These 26 years of reports detail our commitments to transparency, aggressive cost controls and student-centered programs.
         </p>
 
         <p>
