--- a/faq.html
+++ b/faq.html
@@ -60,7 +60,7 @@
             UCLA Student Media has reduced its expenses by almost 40 percent since the recession hit in 2008.
           </li>
           <li>
-            The department recently laid off three of its seven non-student support staff, and is not hiring a new employee to replace its director after his April retirement.
+            The department has cut its non-student support staff from seven to three, and is now operating without its longtime director after his retirement this month.
           </li>
           <li>
             The Daily Bruin is preparing to cut the size of its Kerckhoff Hall office in half by renting its current advertising section to the Department of Student Affairs.
@@ -110,7 +110,7 @@
 
         <p>Since the advent of the Internet, the Daily Bruin and Student Media have been working to diversify sources of revenue and reduce the dependence on print advertising. Innovative new online and offline advertising channels and other sources of revenue have been developed, taking some of the burden off traditional advertising sales. The Daily Bruin was one of the first campus newspapers to have a website, and today UCLA Student Media is a leader in digital advertising.</p>
 
-        <p>Other areas of income include advertisements on Daily Bruin news stands and sales of the BruinLife yearbook. In 2009, the Communications Board began receiving fee support for the first time through Practicing Leadership and Empowerment to Develop Growth through Education (PLEDGE). This fee helped Student Media weather some of the dramatic revenue losses after the 2008 recession, and it supports overhead and administrative costs for Student Media publications that do not bring in advertising revenue but still have expenses like rent and utilities &ndash; such as UCLA Radio and seven community-oriented newsmagazines. Still, the Daily Bruin and Bruinwalk&rsquo;s finances remain tied to the unpredictable and always-sinking print advertising revenues, and while the Daily Bruin once had additional funds to support Student Media&rsquo;s other publications, it now needs additional income just to support itself. The Daily Bruin and Bruinwalk.com also bring in some money through online and mobile advertising; however, market prices for online ads are far lower than print ones, and thus these only account for 6 percent of the department&rsquo;s income.</p>
+        <p>Other areas of income include advertisements on Daily Bruin news stands and sales of the BruinLife yearbook. In 2009, the Communications Board began receiving fee support for the first time through Practicing Leadership and Empowerment to Develop Growth through Education (PLEDGE). This fee helped Student Media weather some of the dramatic revenue losses after the 2008 recession, and it supports overhead and administrative costs for Student Media publications that do not have advertising revenue but still have expenses like rent and utilities. Still, Student Media's finances remain tied to the unpredictable and always-sinking print advertising revenues, and while the Daily Bruin once had additional funds to support all publications in the department, it will now need additional income just to support itself. The Daily Bruin and Bruinwalk.com also bring in some money through online and mobile advertising; however, market prices for online ads are far lower than print ones, and thus these only account for 6 percent of the department&rsquo;s income.</p>
         
       </div>
     </div>
