--- a/finances.html
+++ b/finances.html
@@ -30,7 +30,7 @@
         Feel free to email us at <a href="mailto:campaign@dailybruin.com">campaign@dailybruin.com</a> if you have any questions about our financial statements or about the referendum. We will return your email within 12 hours.
         </p>
 
-        <img src="http://dailybruin.com/images/2016/04/fee.finance.png" />
+        <img src="http://dailybruin.com/images/2016/04/fee.finance.FINAL_.png" />
         <b>Annual Finance Reports</b>
 
 
