minor copy fixes

--- a/vote.html
+++ b/vote.html
@@ -26,10 +26,10 @@
         Thank you for supporting the future of the Daily Bruin and Bruinwalk.com.
         </p>
 
-        <p>You can vote for the Daily Bruin and Bruinwalk.com referendum during the USAC elections throughout Week 6 on <a href="http://my.ucla.edu">MyUCLA</a> &ndash; log in and click &ldquo;Elections&rdquo;. Then scroll all the way down &ndash; we&rsquo;re the last item on the ballot!</p>
+        <p>You can vote for the Daily Bruin and Bruinwalk.com referendum during the USAC elections throughout Week 6 on <a href="http://my.ucla.edu">MyUCLA</a> &ndash; log in and click &ldquo;Elections.&rdquo; Then scroll all the way down &ndash; we&rsquo;re the last item on the ballot!</p>
 
         <p>
-        Voting opens at 10 a.m. on Monday, May 2 and closes at 3 p.m. on Friday, May 6.
+        Voting opens at 10 a.m. on Monday, May 2, and closes at 3 p.m. on Friday, May 6.
         </p>
 
        <!--  <a class="button">Vote here</a> -->
