images with links; fixed button coloring

--- a/index.html
+++ b/index.html
@@ -49,7 +49,44 @@
 
     <div class="row">
       <div class="medium-8 medium-centered columns">
-        <img id="media_titles" src="media.png">
+        <div class="media-imgs">
+
+          <a href="http://dailybruin.com">
+            <img class="img-top" src="dailybruin.png">
+          </a>
+          <a href="http://bruinwalk.com">
+            <img class="img-top" src="bruinwalk.png">
+          </a>
+          <a href="http://uclaradio.com">
+            <img class="img-top" src="uclaradio.png">
+          </a>
+          <a href="http://bruinlife.com">
+            <img class="img-top" src="bruinlife.png">
+          </a>
+
+          <a href="http://al-talib.org/">
+            <img class="img-bottom" src="altalib.png">
+          </a>
+          <a href="http://femmagazine.com/">
+            <img class="img-bottom" src="fem.png">
+          </a>
+          <a href="http://haam.org/">
+            <img class="img-bottom" src="haam.png">
+          </a>
+          <a href="http://lagente.org/">
+            <img class="img-bottom" src="lagente.png">
+          </a>
+          <a href="http://www.nommomagazine.com/">
+            <img class="img-bottom" src="nommo.png">
+          </a>
+          <a href="http://outwritenewsmag.org/">
+            <img class="img-bottom" src="outwrite.png">
+          </a>
+          <a href="http://pacificties.org/">
+            <img class="img-bottom" src="pacificties.png">
+          </a>
+
+        </div>
       </div>
     </div>
 
