--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
         <a class="button" style="margin:1em 1em 0.5em 1em;" href="about.html">Read more about the referendum</a>
-        <a class="button" style="margin:1em 1em 0.5em 1em;" href="vote.html">Remind me when voting begins</a>        
+        <a class="button" style="margin:1em 1em 0.5em 1em;" href="vote.html">Vote now on MyUCLA</a>        
 
       </div>
 
