remove 'remind to vote' form, add button to vote

--- a/vote.html
+++ b/vote.html
@@ -32,11 +32,10 @@
         Voting opens at 10 a.m. on Monday, May 2, and closes at 3 p.m. on Friday, May 6.
         </p>
 
-       <!--  <a class="button">Vote here</a> -->
+       <a class="button">Vote now</a>
 
         <img style="margin-bottom:2em;" src="http://dailybruin.com/images/2016/04/fee.votingprocedure.FINAL_.png">
 
-       <iframe src="https://docs.google.com/forms/d/12QWcNsNc520yeB43FdeaYYTSVcFXpTFs-uD4RH1dp3w/viewform?embedded=true" width="100%" height="900" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
 
       </div>
