--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="row">
-      <div class="medium-8 medium-centered columns">
+      <div class="medium-8 medium-centered columns" style="text-align:center;">
 
         <div class="media-imgs">
           <a href="http://dailybruin.com">
