ACTUALLY LINK vote button lol

--- a/vote.html
+++ b/vote.html
@@ -32,7 +32,7 @@
         Voting opens at 10 a.m. on Monday, May 2, and closes at 3 p.m. on Friday, May 6.
         </p>
 
-       <a class="button">Vote now</a>
+       <a class="button" href="http://my.ucla.edu">Vote now</a>
 
         <img style="margin-bottom:2em;" src="http://dailybruin.com/images/2016/04/fee.votingprocedure.FINAL_.png">
 
