--- a/vote.html
+++ b/vote.html
@@ -29,10 +29,10 @@
         <p>You can vote for the Daily Bruin and Bruinwalk.com referendum during the USAC elections throughout Week 6 on <a href="http://my.ucla.edu">MyUCLA</a> &ndash; log in and click &ldquo;Elections.&rdquo; Then scroll all the way down &ndash; we&rsquo;re the last item on the ballot!</p>
 
         <p>
-        Voting opens at 10 a.m. on Monday, May 2, and closes at 3 p.m. on Friday, May 6.
+        Voting closes at 3 p.m. on Friday, May 6.
         </p>
 
-       <a class="button" href="http://my.ucla.edu">Vote now</a>
+       <a class="button" href="https://be.my.ucla.edu/election/election.asp">Vote now</a>
 
         <img style="margin-bottom:2em;" src="http://dailybruin.com/images/2016/04/fee.votingprocedure.FINAL_.png">
 
