--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
 
 
         <a class="button" style="margin:1em 1em 0.5em 1em;" href="about.html">Read more about the referendum</a>
-        <a class="button" style="margin:1em 1em 0.5em 1em;" href="vote.html">Vote now on MyUCLA</a>        
+        <a class="button" style="margin:1em 1em 0.5em 1em;" href="vote.html">Vote now on MyUCLA</a>    
+
+        <div class="videoWrapper">
+          <iframe width="560" height="349" src="https://www.youtube.com/embed/tC_qLnOgtXU" frameborder="0" allowfullscreen></iframe>    
+        </div>
+        
 
       </div>
 
