--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
     <footer>
       <div class="row">
         <div class="medium-6 medium-centered columns">
-          PRINTING OUT AND DISTRIBUTING THIS MATERIAL IS STRICTLY PROHIBITED. ALL CAMPAIGN LEAFLETS MUST BE STAMPED AT THE E-BOARD OFFICE, 519 KERCKHOFF. FAILURE TO COMPLY WITH THIS GUIDELINE WILL CONSTITUTE A VIOLATION OF THE ELECTION CODE.
+          PRINTING OUT AND DISTRIBUTING THIS MATERIAL IS STRICTLY PROHIBITED. ALL CAMPAIGN LEAFLETS MUST BE STAMPED AT THE E-BOARD OFFICE, 519 KERCKHOFF. FAILURE TO COMPLY WITH THIS GUIDELINE WILL CONSTITUTE A VIOLATION OF THE ELECTION CODE. #USACMAKEITCOUNT
         </div>
       </div>
     </footer>
